# Proyecto-Lenguajes-de-Programacion

./: README.md
FinalProject/: CMakeLists.txt  main.cpp
FinalProject/Exceptions/: Exception.cpp  Exception.h
FinalProject/GUI/: Resource.qrc  board.cpp  board.h  board.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  notifydialog.cpp  notifydialog.h  notifydialog.ui
FinalProject/Processing/: FindError.cpp  FindError.h  Verify.cpp  Verify.h
FinalProject/Tests/: Cases  Test.cpp  Test.h
GUI/: CMakeLists.txt  main.cpp
GUI/GUI/: mainwindow.cpp  mainwindow.ui
GUI/Verification/: Verify.cpp  Verify.h
Practica_1/: CMakeLists.txt  Exceptions.cpp  Exceptions.h  Input.cpp  Input.h  LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  Output.cpp  Output.h  Processing.cpp  Processing.h  Storage.cpp  Storage.h  main.cpp  usuarios.txt
Practica_1/FileHandling/: Storage.cpp  Storage.h
Practica_1/Inputs/: Input.cpp  Input.h
Practica_1/InternalProcessing/: Processing.cpp  Processing.h
Practica_1/LinkedList/: LinkedList.cpp  LinkedList.h  Node.h
Practica_1/Outputs/: Output.cpp
Practica_2_Functional_Programming/src/: Main.java  Test.java
Practica_2_Functional_Programming/src/FileHandling/: Read.java
Practica_2_Functional_Programming/src/Input/: Input.java
Practica_2_Functional_Programming/src/POJO/: Employee.java
Practica_2_Functional_Programming/src/Processing/: ProcessEmployees.java
