cmake_minimum_required(VERSION 3.23)
project(ProyectoLenguajesProgramacion)

set(CMAKE_CXX_STANDARD 20)

add_executable(Practica_1 main.cpp Node.cpp Node.h LinkedList.cpp LinkedList.h Storage.cpp Storage.h Output.cpp Output.h Input.cpp Input.h Exceptions.cpp Exceptions.h Processing.cpp Processing.h)
